# SQX_EDGE_PRO

./: .gitattributes  .gitignore  GITHUB_SETUP_GUIDE.md  README.md  README_github  package-lock.json  package.json  pyproject.toml  run_dev.ps1  start.bat
backend/app/: __init__.py  config.py  main.py
backend/app/api/: assets.py  dashboard.py  health.py  imports.py  quality.py
backend/app/core/: score_engine.py  symbol_normalizer.py
backend/app/database/: __init__.py  migrations.py  session.py
backend/app/repositories/: asset_repository.py  quality_repository.py
backend/app/resources/: catalog_seed.json
backend/app/services/: mt5_csv_importer.py  mt5_import_archive.py
backend/tests/: test_catalog_seed.py  test_mt5_csv_importer.py  test_scoring.py
backend/tests/fixtures/: AUDCAD_spread_hourly.csv  AUDCAD_spread_stats.csv  GBPUSD_spread_hourly.csv  GBPUSD_spread_stats.csv
desktop/: backend-manager.js  main.js  paths.js  preload.js
docs/: PHASES.md  architecture.md  data-contracts.md  planing_dashboard.md
frontend/: index.html
frontend/css/: app.css
frontend/js/: app.js
