[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sqx-edge-pro-backend"
version = "0.1.0"
description = "Local FastAPI backend for SQX Edge Pro"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0"
]

[tool.setuptools]
py-modules = []
